--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "description": "Frontend for Vagarish, a Kleros search engine",
   "main": "index.js",
   "scripts": {
-    "start": "react-scripts start"
+    "start": "react-scripts start",
+    "build": "react-scripts build"
   },
+  "proxy": "http://localhost:4000",
   "prettier": {
     "semi": false
   },
