--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vagarish-web",
-  "version": "0.0.0",
+  "version": "1.0.0",
   "description": "Frontend for Vagarish, a Kleros search engine",
   "main": "index.js",
   "scripts": {
@@ -23,11 +23,14 @@
   },
   "dependencies": {
     "@apollo/client": "^3.3.20",
+    "@fontsource/roboto": "^4.4.5",
     "@material-ui/core": "^4.11.4",
+    "@material-ui/icons": "^4.11.2",
     "formik": "^2.2.9",
     "graphql": "^15.5.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-masonry-css": "^1.0.16",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.3"
   },
